# huggingface-ptm-forking

./: README.md  pyproject.toml
huggingface_ptm_forking/checkOnPurdueData/: samples.py
huggingface_ptm_forking/checkOnPurdueData/samples/: sampledItems.txt
huggingface_ptm_forking/identifyGeneratedFromTrainer/: automate.bash  identifyTrainer.py
huggingface_ptm_forking/identifyGeneratedFromTrainer/readMeFilesStorage/: README.md  README.md.1  README.md.2
huggingface_ptm_forking/karolina/: identifyBaseModel.sh  items.py
huggingface_ptm_forking/karolina/identifyGeneratedFromTrainer/: automate.bash
huggingface_ptm_forking/testTrainer/: main.py
