[tool.poetry]
name = "huggingface-ptm-forking"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.1.0+cu118", source = "pytorch_cuda11.8"}
torchvision = {version = "^0.16.0+cu118", source = "pytorch_cuda11.8"}
torchaudio = {version = "^2.1.0+cu118", source = "pytorch_cuda11.8"}
transformers = {version = "^4.34.1", extras = ["torch"]}
datasets = "^2.14.5"
evaluate = "^0.4.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"


[[tool.poetry.source]]
name = "pytorch_cuda11.8"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
