[tool.poetry]
name = "huggingface-ptm-forking"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = {version = "^4.34.1", extras = ["torch"]}
datasets = "^2.14.5"
evaluate = "^0.4.1"
scikit-learn = "^1.3.1"
torch = "^2.1.0"
torchaudio = "^2.1.0"
torchvision = "^0.16.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
